--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -7,14 +7,23 @@ body
     margin: 0;
     padding: 0;
 }
-#container
+#cabecera
 {
+    background: #33a;
+    box-shadow: 0px 2px 20px 0px rgba(0,0,0, 0, 5) ;
+    color: white;
+    font-weight: bold;
     width: 70%;
-    padding: 1em;
-    text-align: left;
-    border: 1px solid #ddd;
-    margin: 0 auto;
+    padding: .5em;
+    margin: 0;
 }
+#cabecera #tagline
+{
+    padding: 0 0 0 1em;
+    font-weight: normal;
+    font-size: .8em;
+}
+
 #container h1 
 {
      font-size: 20px;
