--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -23,7 +23,14 @@ body
     font-weight: normal;
     font-size: .8em;
 }
-
+#container
+{
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 1px solid #ddd;
+    margin: 0 auto;
+}
 #container h1 
 {
      font-size: 20px;
